--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>Blog de conciertos</title>
+    <link rel="stylesheet" href="css/estilos.css">
+    <style>
+    h1{
+      font-family: arial;
+    }
+    </style>
+
   </head>
   <body>
-    <h1><img src="concert_logo.png" alt="Logo blog de conciertos" title="Logo blog de conciertos"> Tu concierto </h1>
-    <p>Bienvenido a tu blog de conciertos</p>
-    <img src="concert.jpg" alt="concierto" title="concierto" width="1000">
+    <h1><img src="concert_logo.png" alt="Logo blog de conciertos" style="background-color: white" title="Logo blog de conciertos"> Tu concierto </h1>
+    <p>Bienvenido a tu blog de conciertos...</p>
+    <img src="concert.jpg" alt="concierto" title="concierto" style="width: 80%">
   </body>
 </html>
