V 1.3 se agrega enlace info

--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
     <title>Blog de conciertos</title>
     <link rel="stylesheet" href="css/estilos.css">
     <style>
-    h1{
-      font-family: arial;
-    }
+
     </style>
 
   </head>
   <body>
+    <div>
     <h1><img src="concert_logo.png" alt="Logo blog de conciertos" style="background-color: white" title="Logo blog de conciertos"> Tu concierto </h1>
     <p>Bienvenido a tu blog de conciertos...</p>
     <img src="concert.jpg" alt="concierto" title="concierto" style="width: 80%">
+    <br>
+    <a href=""mailto:info@tuconcierto.com>Info</a>
   </body>
 </html>
